--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 version = "0.1.0"
-name = "fibonacci-program"
+name = "binary-tree-program"
 edition = "2021"
 
 [dependencies]
 alloy-sol-types = { workspace = true }
 sp1-zkvm = "5.0.0"
-fibonacci-lib = { path = "../lib" }
+eth-binary-tree = {git = "https://github.com/varun-doshi/eth-binary-tree.git",branch = "main"}
+
